--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-
-make.bat
-*.pvd
-obstacle
-dambreak
-
 # Compiled source #
 ###################
 *.com
@@ -56,6 +50,7 @@ desktop.ini
 inno/
 *.p
 *.iss
+*.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -73,6 +68,7 @@ develop-eggs/
 dist/
 downloads/
 Output/
+# docs/
 eggs/
 .eggs/
 lib/
@@ -168,7 +164,6 @@ ENV/
 *.toc
 *.xdv
 *.fdb_latexmk
-*.puml
 
 # securiry
 test/etabs_api/test.*
