--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,9 @@ G08_e2_Datos_entrada.ipynb
 G08_e1_Modelo_Parametrico_ETABS.ipynb
 G08_Modelo_ETABS.py
 G08_Extraccion_Resultados.py
+
+
+mod03CSiAPI_example2 AEL Truss.ipynb
+mod04CSiAPI_example3 AEL Lines Influence.ipynb
+mod05CSiAPI_example4 AEL Frame estructurada.ipynb
+mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
