--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,17 @@ inno/
 *.pyo
 *plotModel.py
 # *.ipynb
+# no enviar al github
+*G08_e3_Análisis_Sísmico.ipynb
+*G08_e2_Datos_entrada.ipynb
+*G08_e1_Modelo_Parametrico_ETABS.ipynb
+*G08_Modelo_ETABS.py
+*G08_Extraccion_Resultados.py
+
+*mod03CSiAPI_example2 AEL Truss.ipynb
+*mod04CSiAPI_example3 AEL Lines Influence.ipynb
+*mod05CSiAPI_example4 AEL Frame estructurada.ipynb
+*mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
 
 # Byte-compiled / optimized / DLL files
 # __pycache__/
@@ -169,17 +180,3 @@ ENV/
 
 # securiry
 test/etabs_api/test.*
-
-
-# no enviar al github
-G08_e3_Análisis_Sísmico.ipynb
-G08_e2_Datos_entrada.ipynb
-G08_e1_Modelo_Parametrico_ETABS.ipynb
-G08_Modelo_ETABS.py
-G08_Extraccion_Resultados.py
-
-
-mod03CSiAPI_example2 AEL Truss.ipynb
-mod04CSiAPI_example3 AEL Lines Influence.ipynb
-mod05CSiAPI_example4 AEL Frame estructurada.ipynb
-mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
