--- a/.gitignore
+++ b/.gitignore
@@ -52,12 +52,12 @@ inno/
 # *.pyc
 # *.pyo
 *plotModel.py
+*G08_Modelo_ETABS.py
+*G08_Extraccion_Resultados.py
 # *.ipynb
-G08_e3_Análisis_Sísmico.ipynb
-G08_e2_Datos_entrada.ipynb
-G08_e1_Modelo_Parametrico_ETABS.ipynb
-G08_Modelo_ETABS.py
-G08_Extraccion_Resultados.py
+*%G08%.ipynb
+*%G08%.ipynb
+*%G08%.ipynb
 
 mod03CSiAPI_example2 AEL Truss.ipynb
 mod04CSiAPI_example3 AEL Lines Influence.ipynb
