--- a/.gitignore
+++ b/.gitignore
@@ -54,14 +54,14 @@ inno/
 *G08_Modelo_ETABS.py
 *G08_Extraccion_Resultados.py
 # *.ipynb
-*%G08%.ipynb
-*%G08%.ipynb
-*%G08%.ipynb
+/srcPython/G08_e1_Modelo_Parametrico_ETABS.ipynb
+/srcPython/G08_e2_Datos_entrada.ipynb
+/srcPython/G08_e3_Análisis_Sísmico.ipynb
 
-mod03CSiAPI_example2 AEL Truss.ipynb
-mod04CSiAPI_example3 AEL Lines Influence.ipynb
-mod05CSiAPI_example4 AEL Frame estructurada.ipynb
-mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
+# /srcPython/mod03CSiAPI_example2 AEL Truss.ipynb
+# /srcPython/mod04CSiAPI_example3 AEL Lines Influence.ipynb
+# /srcPython/mod05CSiAPI_example4 AEL Frame estructurada.ipynb
+# /srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
 
 # Byte-compiled / optimized / DLL files
 # __pycache__/
